main: post 로직 전면 수정
