# api/controllers/post.controller.ts
@@ -1,13 +1,22 @@
 import { Request, Response } from "express";
 import { validationResult } from "express-validator";
+import { invalidError, notFoundError, internalError } from "../errors";
 import Post, { IPost } from "../models/post.model";
+import { formattedDate } from "../utils/date.util";
+import { isNaturalNumber } from "../utils/regex_test.util";
 
-export const getAllPosts = async (req: Request, res: Response): Promise<void> => {
+export const getPostList = async (req: Request, res: Response): Promise<void> => {
   /**
+   * #swagger.auto = false
+   * 
    * #swagger.tags = ["post"]
    * #swagger.summary = "게시글 목록"
    * #swagger.description = "게시글 목록 데이터 불러오기"
    *
+   * #swagger.parameters["sort"] = { description: "정렬 순서(desc, asc), 기본값은 desc", type: "string" }
+   * #swagger.parameters["limit"] = { description: "불러올 공지사항 수, 기본값은 10", type: "number" }
+   * #swagger.parameters["page"] = { description: "불러올 페이지 넘버, 기본값은 1", type: "number" }
+   * 
    * #swagger.responses[200] = {
             description: "성공시 데이터 반환",
             content: {
@@ -21,26 +30,61 @@ export const getAllPosts = async (req: Request, res: Response): Promise<void> =>
                 }           
             }
         } 
+   * #swagger.responses[400] = { description: "올바르지 않은 파라미터" }
    * #swagger.responses[500] = { description: "내부 에러" }
    */
   try {
-    const posts: IPost[] = await Post.find().select("-_id seq title content");
+    const errors = validationResult(req);
+    const { sort, limit, page } = req.query;
+    const customSort = !sort ? "desc" : (sort as string);
+    const customLimit = !limit ? 10 : Number(limit);
+    const customPage = !page ? 1 : Number(page);
+    if (customSort !== "asc" && customSort !== "desc") {
+      throw new Error(`400,sort,정렬 순서,${errors.array()}`);
+    }
+    if (!isNaturalNumber(customLimit)) {
+      throw new Error(`400,limit,불러올 공지사항 수,${errors.array()}`);
+    }
+    if (!isNaturalNumber(customPage)) {
+      throw new Error(`400,page,불러올 페이지 넘버,${errors.array()}`);
+    }
 
-    res.status(200).json(posts);
-  } catch (error) {
-    console.error(error);
-    res.status(500).send(error);
+    const posts: IPost[] = await Post.find()
+      .sort({ createdAt: customSort === "asc" ? 1 : -1 })
+      .skip((customPage - 1) * customLimit)
+      .limit(customLimit);
+    const convertPosts = posts.map((item) => {
+      return {
+        _id: item._id.toString(),
+        title: item.title,
+        content: item.content,
+        createdAt: formattedDate(item.createdAt as Date),
+        updatedAt: item.updatedAt ? formattedDate(item.updatedAt as Date) : "",
+      };
+    });
+
+    res.status(200).json([...convertPosts]);
+  } catch (error: any) {
+    const errors = error.message.split(",");
+    switch (errors[0]) {
+      case "400":
+        res.status(400).json(invalidError(errors[1], errors[2], errors[3]));
+        break;
+      default:
+        res.status(500).json(internalError(error.message));
+    }
   }
 };
 
 export const getPost = async (req: Request, res: Response): Promise<void> => {
   /**
    * #swagger.auto = false
+   *
    * #swagger.tags = ["post"]
    * #swagger.summary = "게시글 상세"
    * #swagger.description = "게시글 단 건 불러오기"
    *
-   * #swagger.parameters["seq"] = { in: "path", description: "게시글 번호", type: "number", required: true }
+   * #swagger.parameters["_id"] = { in: "path", description: "게시글 고유 번호", type: "string", required: true }
    *
    * #swagger.responses[200] = { description: "성공시 데이터 반환", schema: { $ref: "#/components/schemas/PostVO" } }
    * #swagger.responses[400] = { description: "올바르지 않은 파라미터" }
@@ -49,27 +93,40 @@ export const getPost = async (req: Request, res: Response): Promise<void> => {
    */
   try {
     const errors = validationResult(req);
-    if (!errors.isEmpty()) {
-      res.status(400).json({ errors: errors.array() });
-      return;
+
+    const { _id } = req.params;
+    if (!_id) {
+      throw new Error(`400,_id,게시글 고유 번호,${errors.array()}`);
     }
 
-    const { seq } = req.params;
-    const post: IPost = await Post.findOne({ seq: seq }).select("-_id seq title content");
-
+    const post: IPost | null = await Post.findById({ _id });
     if (!post) {
-      res.status(404).send("wrong url");
-      return;
+      throw new Error("404,Post,게시글");
     }
 
-    res.status(200).json(post);
-  } catch (error) {
-    console.error(error);
-    res.status(500).send(error);
+    res.status(200).json({
+      _id: post._id.toString(),
+      title: post.title,
+      content: post.content,
+      createdAt: formattedDate(post.createdAt as Date),
+      updatedAt: post.updatedAt ? formattedDate(post.updatedAt as Date) : "",
+    });
+  } catch (error: any) {
+    const errors = error.message.split(",");
+    switch (errors[0]) {
+      case "400":
+        res.status(400).json(invalidError(errors[1], errors[2], errors[3]));
+        break;
+      case "404":
+        res.status(404).json(notFoundError(errors[1], errors[2]));
+        break;
+      default:
+        res.status(500).json(internalError(error.message));
+    }
   }
 };
 
-export const createPost = async (req: Request, res: Response): Promise<void> => {
+export const postPost = async (req: Request, res: Response): Promise<void> => {
   /**
    * #swagger.tags = ["post"]
    * #swagger.summary = "게시글 작성"
@@ -80,10 +137,10 @@ export const createPost = async (req: Request, res: Response): Promise<void> => 
           content: {
               "application/json": {
                   schema: {
-                      $ref: "#/components/schemas/CreatePostVO"
+                      $ref: "#/components/schemas/PostPostVO"
                   },
                   examples: {
-                      example: { $ref: "#/components/examples/CreatePostVO" }
+                      example: { $ref: "#/components/examples/PostPostVO" }
                   }
               }
           }
@@ -101,33 +158,49 @@ export const createPost = async (req: Request, res: Response): Promise<void> => 
     }
 
     const { title, content } = req.body;
+    if (!title) {
+      throw new Error(`400,title,제목,${errors.array()}`);
+    }
+    if (!content) {
+      throw new Error(`400,content,내용,${errors.array()}`);
+    }
+
     const newPost: IPost = new Post({ title, content });
     await newPost.save();
 
     res.status(201).json({
-      seq: newPost.seq,
+      status: "ok",
     });
   } catch (error: any) {
-    console.error(error);
-    res.status(500).send(error);
+    const errors = error.message.split(",");
+    switch (errors[0]) {
+      case "400":
+        res.status(400).json(invalidError(errors[1], errors[2], errors[3]));
+        break;
+      default:
+        res.status(500).json(internalError(error.message));
+    }
   }
 };
 
-export const updatePost = async (req: Request, res: Response): Promise<void> => {
+export const putPost = async (req: Request, res: Response): Promise<void> => {
   /**
+   * #swagger.auto = false
+   * 
    * #swagger.tags = ["post"]
    * #swagger.summary = "게시글 수정"
    * #swagger.description = "게시글 업데이트하기"
    * 
+   * #swagger.parameters["_id"] = { in: "path", description: "게시글 고유 번호", type: "string", required: true }
    * #swagger.requestBody = {
           required: true,
           content: {
               "application/json": {
                   schema: {
-                      $ref: "#/components/schemas/UpdatePostVO"
+                      $ref: "#/components/schemas/PutPostVO"
                   },
                   examples: {
-                      example: { $ref: "#/components/examples/UpdatePostVO" }
+                      example: { $ref: "#/components/examples/PutPostVO" }
                   }
               }
           }
@@ -140,38 +213,56 @@ export const updatePost = async (req: Request, res: Response): Promise<void> => 
    */
   try {
     const errors = validationResult(req);
-    if (!errors.isEmpty()) {
-      res.status(400).json({ errors: errors.array() });
-      return;
+
+    const { _id } = req.params;
+    if (!_id) {
+      throw new Error(`400,_id,게시글 고유 번호,${errors.array()}`);
     }
 
-    const { seq, title, content } = req.body;
-    const updatedPost: IPost | null = await Post.findOneAndUpdate(
-      { seq: seq },
+    const { title, content } = req.body;
+    if (!title) {
+      throw new Error(`400,title,제목,${errors.array()}`);
+    }
+    if (!content) {
+      throw new Error(`400,content,내용,${errors.array()}`);
+    }
+
+    const updatedPost: IPost | null = await Post.findByIdAndUpdate(
+      { _id },
       { title, content },
       { new: true }
     );
-
     if (!updatedPost) {
-      res.status(404).send("wrong url");
-      return;
+      throw new Error("404,Post,게시글");
     }
 
     res.status(200).json({
-      seq: updatedPost.seq,
+      status: "ok",
     });
   } catch (error: any) {
-    console.error(error);
+    const errors = error.message.split(",");
+    switch (errors[0]) {
+      case "400":
+        res.status(400).json(invalidError(errors[1], errors[2], errors[3]));
+        break;
+      case "404":
+        res.status(404).json(notFoundError(errors[1], errors[2]));
+        break;
+      default:
+        res.status(500).json(internalError(error.message));
+    }
   }
 };
 
 export const deletePost = async (req: Request, res: Response): Promise<void> => {
   /**
+   * #swagger.auto = false
+   *
    * #swagger.tags = ["post"]
    * #swagger.summary = "게시글 삭제"
    * #swagger.description = "게시글 삭제하기"
    *
-   * #swagger.parameters["seq"] = { description: "게시글 번호", type: "number", required: true }
+   * #swagger.parameters["_id"] = { in: "path", description: "게시글 고유 번호", type: "string", required: true }
    *
    * #swagger.responses[204] = { description: "삭제 성공" }
    * #swagger.responses[400] = { description: "올바르지 않은 파라미터" }
@@ -179,21 +270,31 @@ export const deletePost = async (req: Request, res: Response): Promise<void> => 
    */
   try {
     const errors = validationResult(req);
-    if (!errors.isEmpty()) {
-      res.status(400).json({ errors: errors.array() });
-      return;
+
+    const { _id } = req.params;
+    if (!_id) {
+      throw new Error(`400,_id,게시글 고유 번호,${errors.array()}`);
     }
 
-    const { seq } = req.query;
-    const deletedPost = await Post.findOneAndDelete({ seq: seq });
+    const deletedPost = await Post.findByIdAndDelete({ _id });
     if (!deletedPost) {
-      res.status(404).send("Post not found");
-      return;
+      throw new Error("404,Post,게시글");
     }
 
-    res.status(204).json(deletedPost);
+    res.status(204).json({
+      status: "ok",
+    });
   } catch (error: any) {
-    console.error(error);
-    res.status(500).send(error);
+    const errors = error.message.split(",");
+    switch (errors[0]) {
+      case "400":
+        res.status(400).json(invalidError(errors[1], errors[2], errors[3]));
+        break;
+      case "404":
+        res.status(404).json(notFoundError(errors[1], errors[2]));
+        break;
+      default:
+        res.status(500).json(internalError(error.message));
+    }
   }
 };
